--- a/gradiotest/requirements.txt
+++ b/gradiotest/requirements.txt
@@ -1,239 +1,70 @@
 aiofiles==23.2.1
-aiohttp==3.9.3
-aiosignal==1.3.1
-altair==5.2.0
+altair==5.3.0
 annotated-types==0.6.0
-anyio==3.7.1
-argilla==0.0.1
-asgiref==3.7.2
-async-timeout==4.0.2
-asyncio==3.4.3
+anyio==4.3.0
 attrs==23.2.0
-backoff==2.2.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.3
-blinker==1.6.3
-Brotli==1.1.0
-bs4==0.0.2
-build==1.0.3
-cachetools==5.3.3
 certifi==2024.2.2
-cffi==1.15.1
-chardet==5.1.0
 charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.4.24
 click==8.1.7
-clickhouse-connect==0.6.6
-colorama==0.4.6
-colorclass==2.2.2
-coloredlogs==15.0.1
-compressed-rtf==1.0.6
 contourpy==1.2.0
-cryptography==41.0.1
-cssselect2==0.7.0
 cycler==0.12.1
-dataclasses-json==0.6.4
-Deprecated==1.2.14
 distro==1.9.0
-docopt==0.6.2
-duckdb==0.8.1
-easygui==0.98.3
-ebcdic==1.1.1
-et-xmlfile==1.1.0
-extract-msg==0.41.5
-faiss-cpu==1.8.0
+exceptiongroup==1.2.0
 fastapi==0.110.0
 ffmpy==0.3.2
-filelock==3.13.1
-filetype==1.2.0
-Flask==3.0.0
-flatbuffers==23.5.26
-fonttools==4.49.0
-frozenlist==1.4.1
-fsspec==2024.2.0
-google-auth==2.28.1
-googleapis-common-protos==1.62.0
-gpt4all==1.0.3
-gradio==3.10.0
-gradio_client==0.10.1
-greenlet==2.0.2
-grpcio==1.62.0
-h11
-hnswlib==0.7.0
-html5lib==1.1
-httpcore==1.0.4
-httptools==0.6.1
+filelock==3.13.3
+fonttools==4.50.0
+fsspec==2024.3.1
+gradio==4.24.0
+gradio_client==0.14.0
+h11==0.14.0
+httpcore==1.0.5
 httpx==0.27.0
-huggingface-hub==0.21.1
-humanfriendly==10.0
+huggingface-hub==0.22.2
 idna==3.6
-IMAPClient==2.3.1
-importlib-metadata==6.11.0
-importlib_resources==6.1.2
-itsdangerous==2.1.2
+importlib_resources==6.4.0
 Jinja2==3.1.3
-joblib==1.3.1
-jsonpatch==1.33
-jsonpointer==2.4
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
-kubernetes==29.0.0
-langchain==0.1.9
-langchain-community==0.0.24
-langchain-core==0.1.27
-langchain-openai==0.0.8
-langsmith==0.1.10
-lark-parser==0.12.0
-linkify-it-py==2.0.3
-lxml==4.9.3
-lz4==4.3.2
-Markdown==3.4.3
 markdown-it-py==3.0.0
-markdown2==2.4.10
 MarkupSafe==2.1.5
-marshmallow==3.21.0
-marshmallow-enum==1.5.1
 matplotlib==3.8.3
-md2pdf==1.0.1
-mdit-py-plugins==0.4.0
 mdurl==0.1.2
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-msg-parser==1.2.0
-msoffcrypto-tool==5.0.1
-multidict==6.0.5
-mypy-extensions==1.0.0
-networkx==3.1
-nltk==3.8.1
-numexpr==2.8.4
 numpy==1.26.4
-oauthlib==3.2.2
-olefile==0.46
-oletools==0.60.1
-onnxruntime==1.17.1
-openai==1.13.3
-openapi-schema-pydantic==1.2.4
-openpyxl==3.1.2
-opentelemetry-api==1.23.0
-opentelemetry-exporter-otlp-proto-common==1.23.0
-opentelemetry-exporter-otlp-proto-grpc==1.23.0
-opentelemetry-instrumentation==0.44b0
-opentelemetry-instrumentation-asgi==0.44b0
-opentelemetry-instrumentation-fastapi==0.44b0
-opentelemetry-proto==1.23.0
-opentelemetry-sdk==1.23.0
-opentelemetry-semantic-conventions==0.44b0
-opentelemetry-util-http==0.44b0
-orjson==3.9.15
-outcome==1.2.0
-overrides==7.7.0
-packaging==23.2
+openai==1.14.3
+orjson==3.10.0
+packaging==24.0
 pandas==2.2.1
-pandoc==2.3
-paramiko==3.4.0
-pcodedmp==1.2.6
-pdf2image==1.16.3
-pdfminer.six==20221105
-permchain==0.0.3
-phi==0.6.7
 pillow==10.2.0
-playwright==1.38.0
-plumbum==1.8.2
-ply==3.11
-posthog==3.4.2
-protobuf==4.25.3
-pulsar-client==3.4.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-pycryptodome==3.20.0
-pydantic==2.6.3
+pydantic==2.6.4
 pydantic_core==2.16.3
 pydub==0.25.1
-pydyf==0.8.0
-pyee==9.0.4
 Pygments==2.17.2
-PyMuPDF==1.22.5
-PyNaCl==1.5.0
-pypandoc==1.11
-pyparsing==3.1.1
-pyphen==0.14.0
-PyPika==0.48.9
-pyproject_hooks==1.0.0
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-dotenv==1.0.1
-python-magic==0.4.27
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-multipart==0.0.9
-python-pptx==0.6.21
 pytz==2024.1
 PyYAML==6.0.1
-red-black-tree-mod==1.20
-referencing==0.33.0
-regex==2023.12.25
+referencing==0.34.0
 requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.7.0
+rich==13.7.1
 rpds-py==0.18.0
-rsa==4.9
-RTFDE==0.0.2
-ruff==0.2.2
-safetensors==0.3.2
-scikit-learn==1.3.0
-scipy==1.9.3
-selenium==4.14.0
+ruff==0.3.4
 semantic-version==2.10.0
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.27
 starlette==0.36.3
-sympy==1.12
-tabulate==0.9.0
-tavily-python==0.1.9
-tenacity==8.2.3
-threadpoolctl==3.2.0
-tiktoken==0.6.0
-tinycss2==1.2.1
-tokenizers==0.15.2
 tomlkit==0.12.0
 toolz==0.12.1
-torch==2.0.1
-torchvision==0.15.2
 tqdm==4.66.2
-transformers==4.31.0
-trio==0.22.2
-trio-websocket==0.11.1
-typer==0.9.0
-typing-inspect==0.9.0
+typer==0.12.0
+typer-cli==0.12.0
+typer-slim==0.12.0
 typing_extensions==4.10.0
 tzdata==2024.1
-tzlocal==5.0.1
-uc-micro-py==1.0.3
-unstructured==0.8.0
 urllib3==2.2.1
-uvicorn==0.27.1
-uvloop==0.19.0
-watchfiles==0.21.0
-weasyprint==60.1
-webdriver-manager==4.0.1
-webencodings==0.5.1
-websocket-client==1.7.0
+uvicorn==0.29.0
 websockets==11.0.3
-Werkzeug==3.0.0
-wrapt==1.16.0
-wsproto==1.2.0
-xlrd==2.0.1
-XlsxWriter==3.1.2
-yarl==1.9.4
-zipp==3.17.0
-zopfli==0.2.3
-zstandard==0.21.0
+zipp==3.18.1
