--- a/rag-embed/requirements.txt
+++ b/rag-embed/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==23.2.1
 aiohttp==3.9.3
 aiosignal==1.3.1
-altair==5.2.0
+altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
 asgiref==3.8.1
@@ -11,42 +11,40 @@ backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
 bs4==0.0.2
-build==1.1.1
+build==1.2.1
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.4.24
 click==8.1.7
-colorama==0.4.6
 coloredlogs==15.0.1
 contourpy==1.2.0
 cycler==0.12.1
 dataclasses-json==0.6.4
 Deprecated==1.2.14
-distro==1.9.0
 exceptiongroup==1.2.0
 fastapi==0.110.0
 ffmpy==0.3.2
-filelock==3.13.1
+filelock==3.13.3
 flatbuffers==24.3.25
 fonttools==4.50.0
 frozenlist==1.4.1
-fsspec==2024.3.0
+fsspec==2024.3.1
 google-auth==2.29.0
 googleapis-common-protos==1.63.0
-gradio==3.50.0
-gradio_client==0.6.1
+gradio==4.24.0
+gradio_client==0.14.0
 grpcio==1.62.1
 h11==0.14.0
-httpcore==1.0.4
+httpcore==1.0.5
 httptools==0.6.1
-httpx==0.25.2
-huggingface-hub==0.21.4
+httpx==0.27.0
+huggingface-hub==0.22.2
 humanfriendly==10.0
 idna==3.6
-importlib-metadata==6.11.0
-importlib_resources==6.3.1
+importlib-metadata==7.0.0
+importlib_resources==6.4.0
 Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
@@ -56,9 +54,9 @@ kiwisolver==1.4.5
 kubernetes==29.0.0
 langchain==0.1.13
 langchain-community==0.0.29
-langchain-core==0.1.34
+langchain-core==0.1.37
 langchain-text-splitters==0.0.1
-langsmith==0.1.27
+langsmith==0.1.38
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.1
@@ -69,23 +67,20 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
-networkx==3.2.1
 numpy==1.26.4
 oauthlib==3.2.2
-ollama==0.1.7
 onnxruntime==1.17.1
-openai==1.14.3
-opentelemetry-api==1.23.0
-opentelemetry-exporter-otlp-proto-common==1.23.0
-opentelemetry-exporter-otlp-proto-grpc==1.23.0
-opentelemetry-instrumentation==0.44b0
-opentelemetry-instrumentation-asgi==0.44b0
-opentelemetry-instrumentation-fastapi==0.44b0
-opentelemetry-proto==1.23.0
-opentelemetry-sdk==1.23.0
-opentelemetry-semantic-conventions==0.44b0
-opentelemetry-util-http==0.44b0
-orjson==3.9.15
+opentelemetry-api==1.24.0
+opentelemetry-exporter-otlp-proto-common==1.24.0
+opentelemetry-exporter-otlp-proto-grpc==1.24.0
+opentelemetry-instrumentation==0.45b0
+opentelemetry-instrumentation-asgi==0.45b0
+opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-proto==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-semantic-conventions==0.45b0
+opentelemetry-util-http==0.45b0
+orjson==3.10.0
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.1
@@ -114,34 +109,30 @@ requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
-ruff==0.3.3
-safetensors==0.4.2
+ruff==0.3.4
 semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
-SQLAlchemy==2.0.28
+SQLAlchemy==2.0.29
 starlette==0.36.3
 sympy==1.12
 tenacity==8.2.3
-tik==0.1.0
 tiktoken==0.6.0
 tokenizers==0.15.2
 tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.1
-torch==2.2.1
-torchaudio==2.2.1
-torchvision==0.17.1
 tqdm==4.66.2
-transformers==4.38.2
-typer==0.9.0
+typer==0.12.0
+typer-cli==0.12.0
+typer-slim==0.12.0
 typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
-uvicorn==0.28.0
+uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websocket-client==1.7.0
