--- a/xkcd-explainer/requirements.txt
+++ b/xkcd-explainer/requirements.txt
@@ -10,6 +10,7 @@ colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
 distro==1.9.0
+exceptiongroup==1.2.0
 fastapi==0.110.0
 ffmpy==0.3.2
 filelock==3.13.1
@@ -66,3 +67,4 @@ tzdata==2024.1
 urllib3==2.2.1
 uvicorn==0.28.0
 websockets==11.0.3
+zipp==3.18.1
