--- a/chat-ui/requirements.txt
+++ b/chat-ui/requirements.txt
@@ -6,6 +6,7 @@ attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
 distro==1.9.0
@@ -19,7 +20,7 @@ gradio==4.24.0
 gradio_client==0.14.0
 h11==0.14.0
 httpcore==1.0.5
-httpx==0.27.0
+httpx==0.25.2
 huggingface-hub==0.22.2
 idna==3.6
 importlib_resources==6.4.0
@@ -31,7 +32,10 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.2.1
 numpy==1.26.4
+ollama==0.1.7
 openai==1.14.3
 orjson==3.10.0
 packaging==24.0
@@ -47,19 +51,27 @@ python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.34.0
+regex==2023.12.25
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
 ruff==0.3.4
+safetensors==0.4.2
 semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 starlette==0.36.3
+sympy==1.12
+tokenizers==0.15.2
 tomlkit==0.12.0
 toolz==0.12.1
+torch==2.2.1
+torchaudio==2.2.1
+torchvision==0.17.1
 tqdm==4.66.2
-typer==0.12.0
+transformers==4.39.1
+typer==0.11.1
 typer-cli==0.12.0
 typer-slim==0.12.0
 typing_extensions==4.10.0
